@startuml ER_Diagram

!define table(x) class x << (T,#FFEEEE) >>
!define primary_key(x) <b><u>x</u></b>
!define foreign_key(x) <i><u>x</u></i>
!define unique(x) <color:blue>x</color>

hide methods
hide stereotypes

table(User) {
  <primary_key>id</primary_key> : UUID
  <unique>email</unique> : String
  name : String?
  password : String?
  createdAt : DateTime
  updatedAt : DateTime
}

table(Board) {
  <primary_key>id</primary_key> : UUID
  title : String
  <foreign_key>creatorId</foreign_key> : UUID
  thumbnailUrl : String?
  currentSnapshotVersion : Int?
  createdAt : DateTime
  updatedAt : DateTime
  @@unique(title, creatorId)
}

table(BoardMember) {
  <primary_key>id</primary_key> : UUID
  <foreign_key>userId</foreign_key> : UUID
  <foreign_key>boardId</foreign_key> : UUID
  role : Role [ADMIN | EDITOR | VIEWER]
  isStarred : Boolean
  @@unique(userId, boardId)
}

table(Shape) {
  <primary_key>id</primary_key> : UUID
  <foreign_key>boardId</foreign_key> : UUID
  <foreign_key>userId</foreign_key> : UUID
  type : ShapeType [RECTANGLE | CIRCLE | LINE | ARROW | TEXT | DRAW | IMAGE]
  data : JSON
  createdAt : DateTime
  updatedAt : DateTime
}

table(Snapshot) {
  <primary_key>id</primary_key> : UUID
  <foreign_key>boardId</foreign_key> : UUID
  version : Int
  data : JSON
  createdAt : DateTime
  updatedAt : DateTime
  @@unique(boardId, version)
}

table(Comment) {
  <primary_key>id</primary_key> : UUID
  <foreign_key>boardId</foreign_key> : UUID
  <foreign_key>shapeId</foreign_key> : UUID
  <foreign_key>userId</foreign_key> : UUID
  content : String
  createdAt : DateTime
  updatedAt : DateTime
}

table(Message) {
  <primary_key>id</primary_key> : UUID
  <foreign_key>boardId</foreign_key> : UUID
  <foreign_key>userId</foreign_key> : UUID
  content : String
  createdAt : DateTime
  updatedAt : DateTime
}

table(Asset) {
  <primary_key>id</primary_key> : UUID
  <foreign_key>boardId</foreign_key> : UUID
  url : String
  type : AssetType [IMAGE | PDF | VIDEO | FILE]
  uploadedBy : String
  createdAt : DateTime
  updatedAt : DateTime
}

table(Notification) {
  <primary_key>id</primary_key> : UUID
  <foreign_key>userId</foreign_key> : UUID
  <foreign_key>boardId</foreign_key> : UUID?
  type : String [share_invite | mention]
  message : String
  metadata : JSON?
  readAt : DateTime?
  createdAt : DateTime
}

table(AuditLog) {
  <primary_key>id</primary_key> : UUID
  <foreign_key>boardId</foreign_key> : UUID
  <foreign_key>userId</foreign_key> : UUID
  action : String
  metadata : JSON?
  createdAt : DateTime
  updatedAt : DateTime
}

table(BoardSettings) {
  <primary_key>id</primary_key> : UUID
  <foreign_key>boardId</foreign_key> : UUID [UNIQUE]
  isPublic : Boolean
  password : String?
  createdAt : DateTime
  updatedAt : DateTime
}

' === Relationships ===

User ||--o{ Board : "creates"
User ||--o{ BoardMember : ""
User ||--o{ Shape : "draws"
User ||--o{ Message : "sends"
User ||--o{ Comment : "writes"
User ||--o{ AuditLog : ""
User ||--o{ Notification : "receives"

Board ||--o{ BoardMember : "has"
Board ||--o{ Shape : "contains"
Board ||--o{ Snapshot : "has versions"
Board ||--o{ Message : "has"
Board ||--o{ Comment : "has"
Board ||--o{ Asset : "has"
Board ||--o{ AuditLog : "has"
Board ||--o{ Notification : "has"
Board ||--o| BoardSettings : "has settings"

Shape ||--o{ Comment : "receives"

@enduml
